--- a/W03_01_heading.html
+++ b/W03_01_heading.html
@@ -119,7 +119,7 @@
                     เพื่อให ้ “ตัวใหญ่ขึ้น” → ต้องแก้ด้วย CSS เท่านั้น</p>
             </section>
 
-            <a href="W02-674230038.html" style="margin: 0 90px;"> &larr; Back to HTML Tutorial</a>
+            <a href="index.html" style="margin: 0 90px;"> &larr; Back to HTML Tutorial</a>
 
     </div>
 
